<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Weather App</string>
    <string name="settings">Settings</string>
    <string name="forecast">Weather Forecast Results</string>
    <string name="show">SHOW ICONS:</string>
    <string name="forecastDay">FORECAST DAY NUMBER: </string>
    
    <string name="setDisplay">SET DISPLAY OPTION: </string>
    <string-array name="displayType">
        <item>ListView</item>
        <item>BarChart</item>
    </string-array>
    
    <string name="refreshForecast">Refresh Forecast</string>
    
    <string name="welcomeTxt">Android Weather Forecast App</string>
    
    <string name="load">Loading...</string>

    <string name="action_settings">Settings</string>
    <string name="about_app">About App</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="select_city">Select CITY</string>
    <string name="retrieve_forecast">Retrieve Forecast</string>

    <string name="addCity">Add City</string>
    
    <string name="resetDefault">Reset Default</string>
    
    <string name="cityList">Available City List</string>
    
</resources>
